[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["materials", "venv/*", "testenv/*", "**/__pycache__/"]


[project]
name = "pinterest-dl"
authors = [{name = "Kurochkin Dmitry", email = "goowolf.proc@gmail.com"}]
description = "Programm for downloading media from Pinterest"

readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">=3.8"

keywords = ["pinterest", "download"]
classifiers = [
    "Programming Language :: Python :: 3",
]

dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/wolfs-computer/pinterest_dl"

[project.scripts]
pinterest_dl = "pinterest_dl.__main__:main"


[tool.setuptools.dynamic]
version = {attr = "pinterest_dl.__version__"}
dependencies = {file = "requirements.txt"}
